# chip-8

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h  instruction.h  renderer.h  screen.h
roms/tests/: readme.txt
src/: chip8.cpp  main.cpp  renderer.cpp  screen.cpp
